chore: remove ua-interactive runner

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "npm run build -ws --if-present",
     "typecheck": "tsc -b",
     "clean": "rm -rf packages/*/dist",
-    "interactive": "npm run build && node scripts/ua-interactive.mjs",
-    "interactive:codex": "npm run build && node scripts/ua-interactive.mjs codex scripts/configs/codex.yaml .cache/ua-interactive/codex",
-    "interactive:claude": "npm run build && node scripts/ua-interactive.mjs claude scripts/configs/claude.yaml .cache/ua-interactive/claude",
+    "interactive": "npm run interactive:codex",
+    "interactive:codex": "npm run build && node packages/uagent/bin/uagent.js codex --home .cache/uagent/codex --workspace .",
+    "interactive:claude": "npm run build && node packages/uagent/bin/uagent.js claude --home .cache/uagent/claude --workspace .",
     "test": "npm run test:unittest",
     "test:unittest": "npm run build && node --test test/unittest/**/*.test.js",
     "test:smoke": "npm run build && node --test test/smoke/**/*.test.js",
