--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@unified-agent-sdk/runtime",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
@@ -12,11 +12,13 @@
       "import": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "dependencies": {
-    "@unified-agent-sdk/runtime-core": "^0.2.0",
-    "@unified-agent-sdk/provider-claude": "^0.2.0",
-    "@unified-agent-sdk/provider-codex": "^0.2.0"
+    "@unified-agent-sdk/runtime-core": "^0.2.1",
+    "@unified-agent-sdk/provider-claude": "^0.2.1",
+    "@unified-agent-sdk/provider-codex": "^0.2.1"
   },
   "scripts": {
     "build": "tsc -b",
