chore(uagent): normalize bin path

--- a/packages/uagent/package.json
+++ b/packages/uagent/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "bin": {
-    "uagent": "./bin/uagent.js"
+    "uagent": "bin/uagent.js"
   },
   "files": [
     "bin",
