Remove sessionId from openSession(), bump to v0.3.0
BREAKING CHANGE: openSession() no longer accepts sessionId parameter.
Sessions should only be resumed via resumeSession(handle).

- Remove sessionId from openSession() signature in runtime-core
- Remove nativeSessionId field, sessionId is now provider-native
- Update Claude/Codex adapters to not require sessionId on open
- Add .env.example and make --env-file optional in test scripts
- Add TEST_CLAUDE_HOME/TEST_CODEX_HOME for test isolation
- Add .claude/ to .gitignore
- Fix documentation path references
- Bump all packages to 0.3.0

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean": "rm -rf packages/*/dist",
     "test": "npm run test:unittest",
     "test:unittest": "npm run build && node --test test/unittest/**/*.test.js",
-    "test:smoke": "npm run build && node --test test/smoke/**/*.test.js",
-    "test:integration": "npm run build && node --test test/integration/**/*.test.js",
+    "test:smoke": "npm run build && { [ -f .env ] && node --env-file=.env --test test/smoke/**/*.test.js || node --test test/smoke/**/*.test.js; }",
+    "test:integration": "npm run build && { [ -f .env ] && node --env-file=.env --test test/integration/**/*.test.js || node --test test/integration/**/*.test.js; }",
     "publish:all": "npm run build && npm publish -w packages/runtime-core --access public && npm publish -w packages/provider-claude --access public && npm publish -w packages/provider-codex --access public && npm publish -w packages/runtime --access public && npm publish -w packages/uagent --access public"
   },
   "devDependencies": {
