feat: Add a guide on instruction file discovery and SDK task definitions, updating mkdocs navigation.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - Use Cases: use-cases.md
   - Guides:
       - Configuration: guides/config.md
+      - Instruction Files: guides/instruction-files.md
       - Orchestrator: guides/orchestrator.md
       - uagent CLI (Interactive): guides/interactive.md
       - Sessions: guides/sessions.md
